--- a/style.css
+++ b/style.css
@@ -4,11 +4,9 @@
   margin: 0;
   padding: 0;
 }
-
 html {
   scroll-behavior: smooth;
 }
-
 header {
   position: fixed;
   width: 100vw;
@@ -20,7 +18,6 @@ header {
   justify-content: space-evenly;
   align-items: center;
 }
-
 .header__menu {
   display: flex;
   list-style: none;
@@ -61,7 +58,6 @@ header {
 .header__social-item:hover {
   border-color: #ff1400;
 }
-
 .header__social-telegram,
 .header__social-instagram,
 .header__social-linkedin {
@@ -79,7 +75,73 @@ header {
   background-image: url("./images/linkedin.svg");
 }
 main {
-  margin-top: 140px;
+  padding-top: 140px;
 }
+main section {
+  max-width: 1400px;
+}
+.cover {
+  min-width: 100%;
+  display: flex;
+}
+.cover__heading {
+  width: 624px;
+  font-size: 50px;
+  font-weight: 900;
+}
+.cover__heading span {
+  color: #ff1400;
+}
+.cover__subheading {
+  margin-top: 30px;
+  width: 737px;
+  margin-bottom: 30px;
+}
+.left-side {
+  margin-left: 261px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@property --myColor1 {
+  syntax: "<color>";
+  initial-value: #000;
+  inherits: false;
+}
+
+@property --myColor2 {
+  syntax: "<color>";
+  initial-value: #000;
+  inherits: false;
+}
+.jobs-check {
+  width: 357px;
+  height: 83px;
+  background-color: #111111;
+  border-radius: 20px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
+  background: linear-gradient(
+    140deg,
+    var(--myColor1),
+    var(--myColor2),
+    var(--myColor1)
+  );
+  transition: box-shadow 0.15s ease, --myColor1 1s ease, --myColor2 1s ease;
+}
+.jobs-check:hover {
+  --myColor1: red;
+  --myColor2: #000;
+  box-shadow: 0px 4px 15px 0px rgba(149, 7, 7, 1); /* Apply box shadow on hover */
+}
+
+/*  */
 footer {
 }
