feat: Add langing list  block

--- a/style.css
+++ b/style.css
@@ -324,6 +324,47 @@ main section {
   font-size: 24px;
   border-left: 3px solid #ff1400;
 }
+.landing {
+  margin-top: 120px;
+}
+.landing__heading {
+  font-size: 36px;
+  margin-bottom: 70px;
+}
+.landing__list {
+  justify-content: space-between;
+  min-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.landing__item {
+  width: 390px;
+  align-items: center;
+  display: flex;
+}
+.landing__item div {
+  margin-right: 20px;
+  color: #ff1400;
+  font-weight: 900;
+  font-size: 83px;
+}
+.landing__item p {
+  font-size: 24px;
+}
+.relocation__offering {
+  margin-top: 120px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.relocation__offering span {
+  font-size: 36px;
+  font-weight: bold;
+  margin-right: 50px;
+}
+.form {
+  margin-top: 120px;
+}
 footer {
   display: flex;
   justify-content: space-around;
