--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ main section {
 .cover {
   min-width: 100%;
   display: flex;
+  justify-content: center;
 }
 .cover__heading {
   width: 624px;
@@ -98,15 +99,18 @@ main section {
 }
 .cover__subheading {
   margin-top: 30px;
-  width: 737px;
+  width: 530px;
   margin-bottom: 30px;
+  font-weight: 400;
 }
 .left-side {
-  margin-left: 261px;
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+.right-side img {
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 @property --myColor1 {
