--- a/style.css
+++ b/style.css
@@ -17,29 +17,6 @@
   padding: 0;
 }
 
-.popup {
-  border: 1px solid #ff1400;
-  left: calc(50% - 120px);
-  top: calc(50% - 50px);
-  z-index: 2;
-  border-radius: 20px;
-  width: 240px;
-  display: none;
-  align-items: center;
-  justify-content: space-evenly;
-  font-size: 44px;
-  cursor: pointer;
-  color: rgb(49, 49, 49);
-  height: 100px;
-  background-color: rgb(255, 255, 255);
-  position: fixed;
-  transition: all 0.15s ease-in;
-}
-.popup:hover {
-  background-color: rgb(0, 0, 0);
-  border: 1px solid #000000;
-  color: rgb(255, 255, 255);
-}
 html {
   scroll-behavior: smooth;
 }
@@ -443,13 +420,16 @@ main section {
   height: 200px;
   overflow: hidden;
 }
+.form__message {
+  background-color: inherit;
+}
 .form__email:focus,
 .form__name:active {
   background: transparent;
 }
 .form__form div div {
   width: 40px;
-  height: 2px;
+  height: 3px;
   background-color: #ff1400;
   margin-left: 20px;
   margin-right: 20px;
@@ -457,8 +437,8 @@ main section {
 .form__line-message {
   margin-top: 15px;
 }
-.form__input-send {
-  cursor: pointer;
+.form__input-send,
+.form__input-sent {
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -480,9 +460,19 @@ main section {
   );
   transition: --myColor1 1s ease, --myColor2 1s ease;
 }
+.form__input-send {
+  cursor: pointer;
+}
 .form__input-send:hover {
   --myColor1: red;
   --myColor2: #000;
+}
+.border-red {
+  border: 1px solid #ff1400;
+}
+
+.form__input-sent {
+  background: #25bb00;
 }
 .form__input-sendbox {
   border: none;
