--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ main section {
   );
   transition: box-shadow 0.15s ease, --myColor1 1s ease, --myColor2 1s ease;
 }
+
 .jobs-check:hover {
   --myColor1: red;
   --myColor2: #000;
@@ -197,34 +198,10 @@ main section {
   background-size: cover !important;
   cursor: pointer;
 }
-.list__item:nth-child(1):hover a {
+.list__item:nth-child(n):hover a {
   color: white;
 }
-.list__item:nth-child(2):hover a {
-  color: white;
-}
-.list__item:nth-child(3):hover a {
-  color: white;
-}
-.list__item:nth-child(4):hover a {
-  color: white;
-}
-.list__item:nth-child(5):hover a {
-  color: white;
-}
-.list__item:nth-child(1):hover svg path {
-  stroke: white;
-}
-.list__item:nth-child(2):hover svg path {
-  stroke: white;
-}
-.list__item:nth-child(3):hover svg path {
-  stroke: white;
-}
-.list__item:nth-child(4):hover svg path {
-  stroke: white;
-}
-.list__item:nth-child(5):hover svg path {
+.list__item:nth-child(n):hover svg path {
   stroke: white;
 }
 .leaders {
@@ -387,7 +364,7 @@ main section {
   outline: none;
   background-color: transparent;
   border: none;
-  font-size: 24px;
+  font-size: 18px;
 }
 .form__form {
   border-right: 1px solid #d7d7d7;
@@ -417,7 +394,7 @@ main section {
 .form__input-message textarea {
   border: none;
   resize: none;
-  font-size: 24px;
+  font-size: 18px;
   outline: none;
   width: 100%;
   height: 200px;
@@ -438,7 +415,8 @@ main section {
   margin-right: 20px;
 }
 .form__line-message {
-  margin-top: 15px;
+  margin-top: 9px;
+  width: 46px !important;
 }
 .form__input-send,
 .form__input-sent {
@@ -553,4 +531,23 @@ footer {
 }
 .footer__legal {
   color: #d7d7d7;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important;
+}
+input:-webkit-autofill {
+  font-size: 18px !important;
+  font-family: inherit;
+  font-weight: inherit;
+}
+.form__input-message textarea {
+  margin-right: 10px;
 }
